# influencer_effect_on_market_visualization

./: README.md  README.rst  pyproject.toml  viz.ipynb
data/: BATS_TSLA 60.csv  BATS_TWTR 60.csv  BINANCE_DOGEUSDT 60.csv  elon_df_date.csv  elon_df_pt.csv  elon_tweets.csv  elon_tweets_sentiment.csv  elon_tweets_v2.csv  stock_data.csv  stock_data_twt.csv  tsla_data_v2.csv  twtr_data_v2.csv
tests/: test_data_viz.py
