[tool.poetry]
name = "data_viz"
version = "0.1.0"
description = ""
authors = ["_fiz_ <36931354+ChrisTheBoi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
statsmodels = "^0.13.2"
scikit-learn = "^1.1.2"
scipy = "^1.9.2"
black = "^22.10.0"
jupyter = "^1.0.0"
pandas-datareader = "^0.10.0"
pywin32 = "^304"
yfinance = "^0.1.77"
fix-yahoo-finance = "^0.1.37"
mplfinance = "^0.12.9-beta.1"
ffn = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
